--- a/package.json
+++ b/package.json
@@ -11,8 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
+    "@tensorflow-models/pose-detection": "^2.1.3",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "p5": "^1.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-p5": "^1.4.1",
+    "react-router-dom": "^7.1.3",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
