--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tensorflow-models/pose-detection": "^2.1.3",
     "@tensorflow/tfjs": "^4.22.0",
     "@tensorflow/tfjs-backend-webgl": "^4.22.0",
+    "framer-motion": "^12.0.6",
     "marked": "^15.0.6",
     "p5": "^1.11.3",
     "react": "^18.3.1",
